# byoa

./: .clang-format  .clang-tidy  .gitignore  .prettierrc.json  .stylelintrc.json  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  package.json  tsconfig.json  vite.config.ts  webpack.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  bundle-and-release.yml  lint.yml  release.yml
cmake/: GenerateResourceFile.cmake
docs/: index.html
scripts/: bundle.js  generate-icons.sh  install.ps1  install.sh  lint-native.js
src/native/: CPPLINT.cfg
src/native/include/: app-controller.hpp  assistant-window.hpp  clipboard.hpp  logger.hpp  main-window.hpp  menubar-controller.hpp  network.hpp  resource-loader.hpp  settings-window.hpp  shortcut.hpp  vault.hpp  webview-wrapper.hpp  window-controller.hpp  window-wrapper.hpp
src/native/resource/mac/: ai-assistant.plist
src/native/resource/mac/app-icons.xcassets/AppIcon.appiconset/: Contents.json
src/native/resource/mac/app-icons.xcassets/MenuBarIcon.imageset/: Contents.json
src/native/resource/win/: app.rc  native-resources.h  resource-ids.h
src/native/source/mac/: app-controller.mm  assistant-window.mm  clipboard.mm  main-window.mm  menubar-controller.mm  settings-window.mm  shortcut.mm  window-controller.mm  window-wrapper.mm
src/native/source/win/: app-controller.cpp  clipboard.cpp  menubar-controller.cpp  resource-loader.cpp  shortcut.cpp  window-wrapper.cpp
src/native/source/xplat/: logger.cpp  main.cpp  network.cpp  vault.cpp  webview-wrapper.cpp  window-wrapper.cpp
src/web/: App.tsx  app.tsx  index.css  index.ejs  index.html  index.jsx  main.tsx
src/web/components/: AppIcon.tsx  AppMenuBar.tsx  AssistantPopup.tsx  SettingsDialog.tsx  assistant-popup.tsx  diff-viewer.tsx  settings-dialog.tsx
src/web/components/ai-text/: ai-text.scss  index.jsx
src/web/components/assistant/: assistant.scss  index.jsx
src/web/components/edit-workflow/: fix-grammar.jsx  gen-text.jsx  index.jsx  index.scss
src/web/components/error-boundary/: index.jsx
src/web/components/preview-content/: index.jsx  preview.scss
src/web/components/spinner/: index.jsx  spinner.scss
src/web/components/titlebar/: index.jsx  titlebar.scss
src/web/controller/: message-controller.js
src/web/examples/: diff-example.ts
src/web/stores/: assistant-store.js  history.js
src/web/styles/: globals.css
src/web/types/: window.d.ts
src/web/utils/: clipboard.ts  events.ts  helpers.js  llm.ts  logger.js  similarity.ts  utility.ts  vault.ts
